--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "magnific-popup": "^1.1.0",
     "select2": "^4.0.6-rc.1",
     "slick": "^1.12.2",
+    "swiper": "^5.3.1",
     "waypoints": "^4.0.1"
   }
 }
